<resources>
    <string name="app_name" translatable="false">ReciPie</string>
    <string name="next">Next</string>
    <string name="obOneTitle">Become A Master Chef</string>
    <string name="obOneDescription">Find Recipes from the Master Chefs all around the World to fulfill your cravings</string>
    <string name="obTwoTitle">Track Your Pantry</string>
    <string name="obTwoDescription">Spend less time thinking about what you forgot to buy and Spend more time Cooking</string>
    <string name="obThreeTitle">Plan All Your Meals</string>
    <string name="obThreeDescription">Synchronise your pantry, grocery list and recipes automatically using the Meal Planner</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="login">Log in</string>
    <string name="signup">Sign Up</string>
    <string name="forgot">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="mobno">Phone Number</string>
    <string name="recipes">Recipes</string>
    <string name="recipe">Recipe</string>
    <string name="downloader">Downloader</string>
    <string name="groceries">Groceries</string>
    <string name="pantry">Pantry</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="servings">Servings</string>
    <string name="prep">Prep Time</string>
    <string name="min">Min</string>
    <string name="cook">Cook Time</string>
    <string name="ingredient">Ingredient</string>
    <string name="add">Add</string>
    <string name="directions">Directions</string>
    <string name="item">Item</string>
    <string name="num">num</string>
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="view_recipes">View Recipes</string>
    <string name="saved_pages">Saved Pages</string>
    <string name="saved">Saved</string>
    <string name="long_to_delete">Long Press on a Recipe to Delete it</string>
    <string name="deleted">Deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="delete_recipe">Do You Want to Delete this Recipe</string>
    <string name="direction">Direction</string>
    <string name="save">Save</string>
    <string name="my_recipes">My Recipes</string>
    <string name="total_time">Total Time (min)</string>
    <string name="_00">00</string>
    <string name="totaltime">Total Time</string>
    <string name="ingredients">Ingredients</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="_30_00">30:00</string>
    <string name="_00_00">00:00</string>
    <string name="_0">0</string>
    <string name="timer">Timer</string>
    <string name="cln">:</string>
    <string name="stop">Stop</string>
    <string name="recipie_timer">ReciPie Timer</string>
    <string name="recipie_desc">Time is Up!!! Check on Your</string>
    <string name="timer_run">You Have a Timer Running Currently</string>
    <string name="field_cant_be_empty">Field can\'t be Empty</string>
    <string name="please_enter_a_valid_email_address">Please Enter a Valid Email Address</string>
    <string name="weak_pass">Password must have a number and letter</string>
    <string name="short_pass">Password must be 6 or More Characters</string>
    <string name="try_again">Try Again</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="add_directions">Add Directions</string>
    <string name="grocery">Grocery</string>
    <string name="delete_grocery">Do You Want to Delete This Grocery</string>
    <string name="grocery_clear">Grocery List Cleared</string>
    <string name="grocery_clearance">Do You Want to Clear Your Grocery List</string>
    <string name="choose_language">Choose Language</string>
    <string name="choose_alarm_sound">Choose Alarm Sound</string>
    <string name="alarm1">Alarm 1</string>
    <string name="alarm2">Alarm 2</string>
    <string name="alarm3">Alarm 3</string>
    <string name="alarm4">Alarm 4</string>
    <string name="english">English</string>
    <string name="espa_ol">Español</string>
    <string name="fran_ais">Français</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_reset">Email Sent</string>
    <string name="match_pass">Passwords do not match</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="you_still_have_items">You still have Items in your Grocery List</string>
    <string name="hold_on_the_download_button_to_save_a_page">Hold on the Download Button to Save a Page</string>
    <string name="log_out"><u>Log Out</u></string>
    <string name="log_out_bt">Log Out</string>
    <string name="facebook_app_id" translatable="false">154133226579164</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb154133226579164</string>
    <string name="delete_account"><u>Delete Account</u></string>
    <string name="delete_acc">Are You Sure You want to Delete Your Account?</string>
    <string name="user_not_found">User not Found</string>
    <string name="email_already_in_use">Email already in Use</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="food">Food</string>
    <string name="username">Username</string>
    <string name="user">User</string>
    <string name="hello">Hello</string>
    <string name="profile">Profile</string>
    <string name="logged_in">You Are not Logged In</string>
    <string name="no_symbol_or_spaces_allowed">No Special Characters or Spaces Allowed</string>
    <string name="click_to_verify_email">Click to Verify Email</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="password_updated">Password Updated</string>
    <string name="updated">Updated</string>
    <string name="click_profile">Tap on Profile Image to Change Profile Picture</string>
    <string name="uploaded">Uploaded Successfully</string>
    <string name="downloaded">Downloaded Successfully</string>
    <string name="you_dont_have_any_saved_recipes">You don\'t have any Recipes saved Online</string>
</resources>