<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mainactivity.DownloaderFragment"
    android:background="@color/yellow25">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@raw/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.17"
        android:scaleType="centerCrop"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias=".5"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:textSize="30sp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:lottie_rawRes="@raw/hamburger"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toStartOf="@id/txt_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintHorizontal_bias="1"
        app:lottie_autoPlay="true"
        app:lottie_loop="false" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/vie_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins"
            android:gravity="fill"
            android:text="@string/profile"
            android:textColor="@color/textonpink"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/my_recipes_recycler_view"
            app:layout_constraintEnd_toEndOf="@+id/my_recipes_recycler_view"
            app:layout_constraintHeight_percent=".1"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="@+id/my_recipes_recycler_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/my_recipes_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:background="@drawable/list_view_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".1"
                android:background="@drawable/prof_pic_bg"
                android:src="@raw/chef"
                android:padding="20dp"/>

            <TextView
                android:id="@+id/user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0"
                android:layout_marginTop="10dp"
                android:text="@string/user"
                android:textSize="30sp"
                android:textColor="@color/textonpink"/>

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_text"
                app:layout_constraintVertical_bias="0"
                android:layout_marginTop="5dp"
                android:text="@string/email"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/verify_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_text"
                app:layout_constraintVertical_bias="0"
                android:text="@string/click_to_verify_email"
                android:textSize="15sp"
                android:textColor="@android:color/holo_red_dark"/>

            <Button
                android:id="@+id/reset_pass_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/logout_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1"
                android:layout_margin="10dp"
                android:text="@string/reset_password"
                android:textColor="@color/textonpink"/>

            <Button
                android:id="@+id/logout_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/delete_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1"
                android:layout_margin="10dp"
                android:text="@string/log_out_bt"
                android:textColor="@color/textonpink"/>

            <Button
                android:id="@+id/delete_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1"
                android:layout_margin="10dp"
                android:text="@string/delete_account"
                android:textColor="@color/textonpink"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>