<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:elevation="8dp"
    android:layout_margin="10dp"
    android:background="@drawable/recycler_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/recipe_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias=".05"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/servings_text_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servings"
            app:layout_constraintStart_toStartOf="@id/recipe_name_textview"
            app:layout_constraintTop_toBottomOf="@id/recipe_name_textview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            android:fontFamily="@font/poppins"
            android:textSize="15sp"
            android:textColor="@color/textonpink"/>

        <TextView
            android:id="@+id/servings_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00"
            app:layout_constraintStart_toEndOf="@id/servings_text_textview"
            app:layout_constraintTop_toBottomOf="@id/recipe_name_textview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            android:fontFamily="@font/poppins"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/time_text_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/total_time"
            android:textColor="@color/textonpink"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_name_textview"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/time_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/_00"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/time_text_textview"
            app:layout_constraintTop_toBottomOf="@id/recipe_name_textview"
            app:layout_constraintVertical_bias="0"
            android:layout_marginStart="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>